--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/ergasiadb
+spring.datasource.username=root
+spring.datasource.password=pAssword123
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
 
