--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+spring.security.user.name=user
+spring.security.user.password=Pass123
